<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ufo.ufomobile.reportesmoviles.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView10"
                    android:src="@drawable/user_b" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name_hint"
                    android:id="@+id/name"
                    android:theme="@style/MyEditTextTheme" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView11"
                    android:src="@drawable/mail_b" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:hint="@string/mail_hint"
                    android:id="@+id/mail"
                    android:theme="@style/MyEditTextTheme" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView12"
                    android:src="@drawable/id_b" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/id_hint"
                    android:id="@+id/id_number"
                    android:theme="@style/MyEditTextTheme" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView13"
                    android:src="@drawable/phone_b" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone_hint"
                    android:id="@+id/phone"
                    android:theme="@style/MyEditTextTheme" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:layout_gravity="center_horizontal" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView16"
                    android:src="@drawable/place_b" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/place_hint"
                    android:id="@+id/place"
                    android:theme="@style/MyEditTextTheme" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:alpha="0.8"
                android:layout_gravity="center_horizontal" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:id="@+id/gender_img"
                    android:src="@drawable/gender_b" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="46dp">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:id="@+id/checkBox"
                            android:textColor="@android:color/darker_gray"
                            android:checked="false" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:id="@+id/checkBox2"
                            android:textColor="@android:color/darker_gray"
                            android:checked="false" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorAccentDark"
                        android:id="@+id/view2"
                        android:layout_below="@+id/name"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView14"
                    android:src="@drawable/pass_b" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"
                    android:id="@+id/pass"
                    android:theme="@style/MyEditTextTheme" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView15"
                    android:src="@drawable/pass_b" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/re_password_hint"
                    android:id="@+id/re_pass"
                    android:theme="@style/MyEditTextTheme" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree"
                    android:id="@+id/agree"
                    android:textColor="@android:color/darker_gray"
                    android:checked="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/termns"
                    android:textColor="@color/colorAccent"
                    android:paddingLeft="10dp"
                    android:id="@+id/termns" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_gravity="right"></LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:background="@drawable/button_background"
                android:textColor="#FFF"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
