<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout10">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/pic"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:src="@drawable/profile_pic"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorAccent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="32dp"
                    android:src="@drawable/edit_blue"
                    android:id="@+id/imageView2"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/pic"
                    android:layout_alignEnd="@+id/pic" />
            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView10"
                    android:src="@drawable/user_b" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name_hint"
                    android:id="@+id/name"
                    android:theme="@style/MyEditTextTheme" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView13"
                    android:src="@drawable/phone_b" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone_hint"
                    android:id="@+id/phone"
                    android:theme="@style/MyEditTextTheme" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/restore_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:id="@+id/expand_btn"
                android:src="@drawable/ic_expand_more_white_48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restore_password"
                android:id="@+id/textView5" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:id="@+id/password_layout">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:layout_gravity="center_horizontal" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView3"
                    android:src="@drawable/pass_b" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:id="@+id/edit_password"
                    android:inputType="textPassword"
                    android:theme="@style/MyEditTextTheme" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:layout_gravity="center_horizontal" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView16"
                    android:src="@drawable/pass_b" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/new_password_hint"
                    android:id="@+id/edit_new_password"
                    android:inputType="textPassword"
                    android:theme="@style/MyEditTextTheme" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:layout_gravity="center_horizontal" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView18"
                    android:src="@drawable/pass_b" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/re_new_password_hint"
                    android:id="@+id/edit_re_new_password"
                    android:theme="@style/MyEditTextTheme" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:background="@drawable/button_background"
            android:textColor="#FFF"
            android:id="@+id/done"
            android:textStyle="bold"
            android:layout_below="@+id/linearLayout10"
            android:layout_alignLeft="@+id/linearLayout10"
            android:layout_alignStart="@+id/linearLayout10"
            android:layout_marginTop="16dp" />
    </LinearLayout>

</RelativeLayout>